<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profile_imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description"
        android:layout_marginBottom="2dp"
        app:srcCompat="@drawable/pro_pic"/>

    <LinearLayout
        android:id="@+id/nameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="0"
            android:fontFamily="@font/beautiful"
            android:text="@string/name"
            android:textColor="@color/main"
            />

        <TextView
            android:id="@+id/name_answer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:text="@string/name_answer"
            android:fontFamily="@font/handwritten_font"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dobLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="0"
            android:text="@string/DOB"
            android:fontFamily="@font/beautiful"
            android:textColor="@color/main"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:text="@string/DOB_answer"
            android:fontFamily="@font/handwritten_font"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eduLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edu_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="0"
            android:text="@string/EDU"
            android:fontFamily="@font/beautiful"
            android:textColor="@color/main"/>

        <TextView
            android:id="@+id/edu_answer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:text="@string/EDU_answer"
            android:fontFamily="@font/handwritten_font"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="0"
            android:text="@string/EXP"
            android:fontFamily="@font/beautiful"
            android:textColor="@color/main"/>

        <TextView
            android:id="@+id/exp_answer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/handwritten_font"
            android:text="@string/EXP_answer"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hobLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hob_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="0"
            android:text="@string/HOB"
            android:fontFamily="@font/beautiful"
            android:textColor="@color/main"/>

        <TextView
            android:id="@+id/hob_answer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:text="@string/HOB_answer"
            android:fontFamily="@font/handwritten_font"/>
    </LinearLayout>
</LinearLayout>